--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,4 @@ jobs:
         with:
           branch: gh-pages # Despliega a la rama gh-pages
           folder: dist/browser # Ajustamos la ruta donde se genera los archivos copilados
+          token: ${{ secrets.GH_TOKEN }} # Usa el token integrado
